--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,6 +1,5 @@
 name: Checks
 
-
 on: [push]
 
 jobs:
@@ -8,15 +7,17 @@ jobs:
     name: Test and Lint
     runs-on: ubuntu-20.04  
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Checkout 
-        uses: actions/checkout@v2
-      - name: Test
+
+      - name: Run Tests
         run: docker-compose run --rm app sh -c "python manage.py test"
-      - name: Lint
+
+      - name: Run Linting
         run: docker-compose run --rm app sh -c "flake8"
- 
