--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,7 +23,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Run Tests
-        run: docker compose run --rm app sh -c "python manage.py test"
+        run: docker compose run --rm app sh -c " python manage.py wait_for_db &&
+                                                 python manage.py test "
 
       - name: Run Linting
         run: docker compose run --rm app sh -c "flake8"
