--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.3"
-
 
 services:
   app:
@@ -11,12 +9,15 @@ services:
     - "8000:8000"
     volumes:
     - ./app:/app
-    command: sh -c "python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "python manage.py wait_for_db && 
+                    python manage.py migrate &&
+                    python manage.py runserver 0.0.0.0:8000"
     environment: 
-      - DB_HOST:db
-      - DB_NAME:devdb
-      - DB_USER:devuser
-      - DB_PASSWORD:changeme
+       DB_HOST: host.docker.internal
+       DB_NAME: devdb
+       DB_USER: postgres
+       DB_PASS: Entrance620
+       ports: 5432:5432
     depends_on:
       - db
   
@@ -26,8 +27,8 @@ services:
     - dev-db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=devdb
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=changeme
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=Entrance620
     
 
 volumes:
