--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,11 @@ services:
     - "8000:8000"
     volumes:
     - ./app:/app
-    command: sh -c "python manage.py wait_for_db && 
+    - dev-static-data:/vol/web
+    command: sh -c "python manage.py wait_for_db &&
                     python manage.py migrate &&
                     python manage.py runserver 0.0.0.0:8000"
-    environment: 
+    environment:
        DB_HOST: host.docker.internal
        DB_NAME: devdb
        DB_USER: postgres
@@ -20,7 +21,7 @@ services:
        ports: 5432:5432
     depends_on:
       - db
-  
+
   db:
     image: postgres:17-alpine
     volumes:
@@ -29,7 +30,8 @@ services:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=Entrance620
-    
+
 
 volumes:
   dev-db-data:
+  dev-static-data:
